--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-image: url("https://media1.giphy.com/media/wDEWXcisSjrQQ/200w.webp?cid=82a1493b9humkyd13v31h008nym9m5iimgyl9whflyiypebg&ep=v1_gifs_search&rid=200w.webp&ct=g");
+  background-image: url("https://i.postimg.cc/1XcLrz2X/pexels-stanley-morales-1487076.jpg");
   background-size: 100vh 100vh;
   background-size: cover;
   z-index: -1;
